src/objects/Care_plan_step__c.object
<CustomObject>
    <fields>
        <fullName>Care_Plan_Objective__c</fullName>
        <label>Care Plan Objective</label>
        <referenceTo>Care_Plan_Objective__c</referenceTo>
        <relationshipLabel>Care plan steps</relationshipLabel>
        <relationshipName>Care_plan_steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Care_plan_objective_name__c</fullName>
        <label>Care plan objective name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_name__c</fullName>
        <label>Client name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Responsible_for_Action__c</fullName>
        <label>Person Responsible for Action</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <description>Reference to the object (attendance or event) that this step refers to - set by trigger</description>
        <label>Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Organisation__c</fullName>
        <label>Related Organisation</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Comment__c</fullName>
        <label>Status Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled with notice and reason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Late</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>=================</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Care plan step</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Care_Plan_Objective__c</columns>
        <columns>Client_name__c</columns>
        <columns>Description__c</columns>
        <columns>CONNECTION_RECEIVED.NAME</columns>
        <columns>CONNECTION_SENT.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CPS-{00000}</displayFormat>
        <label>Care plan step name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care plan steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>